removed particles div from body and added it under the title, added </div> immediately after it instead of wrapping it around other contents and it fixed the z-index issue. buttons and picture navigation functions and particles is clickable. targetting the particles more directly with class of .particles-js-canvas-el

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -1,21 +1,31 @@
 /* -- LAYOUT -- */
 
 html {
-  background-color: darkgoldenrod;
+  background-color: black;
   font-family: 'Beth Ellen', monospace;}
 
-
+body {
+  background-color: black;
+}
 
 /* -- PARTICLES -- */
 
-#particles-js {
+/* #particles-js {
   width: 100%;
   height: 100%;
   background-color: black;
   background-image: url("");
   background-size: cover;
   background-position: 50% 50%;
-  background-repeat: no-repeat; }
+  background-repeat: no-repeat; } */
+
+.particles-js-canvas-el {
+    position: absolute;
+    top:0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+  }
 
 /* -- Liberosis Title -- */
 
@@ -42,7 +52,7 @@ ul h3 {
 /* -- BUTTON -- */
 
 #menuButton {
-  background: linear-gradient(to bottom, #b8870b 5%, #2b2a28 100%);
+  background: linear-gradient(to bottom, darkgoldenrod 5%, black 100%);
   background-color: #b8870b;
   border-radius: 42px;
   color: black;
